[tool.poetry]
name = "xmltv-mutator"
version = "0.1.0"
description = ""
authors = ["Matthew Schinckel <matt@schinckel.net>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "*"
quart = "*"
beautifulsoup4 = "*"
lxml = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
